--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/courses
+spring.datasource.username=root
+spring.datasource.password=pIstol672@#
 
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl.auto=updatae
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
